syntax = "proto3";
package protos.logicmodule;
import "protos/common_messages.proto";
option java_package = "es.bsc.dataclay.communication.grpc.messages.logicmodule";
option java_multiple_files = false;

message NewAccountNoAdminRequest {
	string yamlNewAccount = 1;
}

message NewAccountRequest {
	string adminID = 1;
	protos.common.Credential admincredential = 2;
	string yamlNewAccount = 3;
}

message NewAccountResponse {
	string newAccountID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message PublishAddressRequest { 
	string hostname = 1;
	int32 port = 2;
}

message GetAccountIDRequest {
	string accountName = 1;
}

message GetAccountIDResponse {
	string newAccountID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message AutoRegisterSLRequest {
	string storageLocationID = 1;
	string dsName = 2;
	string dsHostname = 3;
	int32 dsPort = 4;
}


message AutoRegisterEERequest {
	string executionEnvironmentID = 1;
	string eeName = 2;
	string eeHostname = 3;
	int32 eePort = 4;
	protos.common.Langs lang = 5;
}

message AutoRegisterEEResponse {
	string storageLocationID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message UnregisterStorageLocationRequest {
	string storageLocationID = 1;
}

message UnregisterExecutionEnvironmentRequest {
	string executionEnvironmentID = 1;
}

message PerformSetAccountsRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string yaml = 3;
}

message PerformSetAccountsResponse {
	string resultYaml = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message PerformSetOperationsRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string yaml = 3;
}

message PerformSetOperationsResponse {
	string resultYaml = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetAccountListRequest {
	string adminID = 1;
	protos.common.Credential admincredential = 2;
}

message GetAccountListResponse {
	repeated string accountIDs = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message NewSessionRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	repeated string contractIDs = 3;
	repeated string dataSetIDs = 4;
	string storeDataSet = 5;
	protos.common.Langs sessionLang = 6;
}

message NewSessionResponse {
	string sessionInfo = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetInfoOfSessionForDSRequest {
	string sessionID = 1;
}

message GetInfoOfSessionForDSResponse {
	string dataSetID = 1;
	int64 date = 2;
	repeated string dataSetIDs = 3;
	protos.common.ExceptionInfo excInfo = 4;
}

message NewNamespaceRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string newNamespaceYaml = 3;
}

message NewNamespaceResponse {
	string namespaceID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetNamespacesRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
}

message GetNamespacesResponse {
	repeated string namespaces = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message RemoveNamespaceRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceName = 3;
}

message GetNamespaceIDRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceName = 3;
}

message GetNamespaceIDResponse {
	string namespaceID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetNamespaceLangRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceName = 3;
}

message GetNamespaceLangResponse {
	protos.common.Langs language = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetObjectDataSetIDRequest {
	string sessionID = 1;
	string objectID = 2;
}

message GetObjectDataSetIDResponse {
	string dataSetID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message ImportInterfaceRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceID = 3;
	string contractID = 4;
	string interfaceID = 5;
}


message ImportContractRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceID = 3;
	string contractID = 4;
}

message NewDataSetRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string dataSetYaml = 3;
}

message NewDataSetResponse {
	string dataSetID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message RemoveDataSetRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string dataSetName = 3;
}

message GetDataSetIDRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string dataSetName = 3;
}

message GetDataSetIDResponse {
	string dataSetID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetPublicDataSetsRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
}

message GetPublicDataSetsResponse {
	repeated string dataSets = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetAccountDataSetsRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
}

message GetAccountDataSetsResponse {
	repeated string dataSets = 1;
	protos.common.ExceptionInfo excInfo = 2;
}


message CheckDataSetIsPublicRequest {
	string dataSetID = 1;
}

message CheckDataSetIsPublicResponse {
	bool isPublic = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message NewClassRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	protos.common.Langs language = 3;
	map<string, string> newClasses = 4;
}

message NewClassResponse {
	map<string, string> newClasses = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message RemoveClassRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceID = 3;
	string className = 4;
}

message RemoveOperationRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceID = 3;
	string className = 4;
	string operationNameAndSignature = 5;
}

message RemoveImplementationRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceID = 3;
	string className = 4;
	string implementationID = 5;
}

message GetOperationIDRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceID = 3;
	string className = 4;
	string operationNameAndSignature = 5;
}

message GetOperationIDResponse {
	string operationID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetPropertyIDRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceID = 3;
	string className = 4;
	string propertyName = 5;
}

message GetPropertyIDResponse {
	string propertyID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetClassIDRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceID = 3;
	string className = 4;
}

message GetClassIDResponse {
	string classID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetClassInfoRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceID = 3;
	string className = 4;
}

message GetClassInfoResponse {
	string metaClassYaml = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetInfoOfClassesInNamespaceRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceID = 3;
}

message GetInfoOfClassesInNamespaceResponse {
	map<string, string> classesInfo = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetImportedClassesInfoInNamespaceRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceID = 3;
}

message GetImportedClassesInfoInNamespaceResponse {
	map<string, string> importedClasses = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetClassIDFromImportRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceID = 3;
	string className = 4;
}

message GetClassIDFromImportResponse {
	string classID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message NewContractRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string newContractYaml = 3;
}

message NewContractResponse {
	string contractID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message RegisterToPublicContractRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string contractID = 3;
}

message RegisterToPublicContractOfNamespaceRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string namespaceID = 3;
}

message RegisterToPublicContractOfNamespaceResponse {
	string contractID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetContractIDsOfApplicantRequest {
	string applicantID = 1;
	protos.common.Credential credential = 2;
}

message GetContractIDsOfApplicantResponse {
	map<string,string> contracts = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetContractIDsOfProviderRequest {
	string providerID = 1;
	protos.common.Credential credential = 2;
	string namespaceIDOfProvider = 3;
}

message GetContractIDsOfProviderResponse {
	map<string,string> contracts = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetContractsOfApplicantWithProvRequest {
	string applicantID = 1;
	protos.common.Credential credential = 2;
	string namespaceIDOfProvider = 3;
}

message GetContractsOfApplicantWithProvResponse {
	map<string,string> contracts = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message NewDataContractRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string dataContractYaml = 3;
}

message NewDataContractResponse {
	string dataContractID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message RegisterToPublicDataContractRequest {
	string accountID = 1;
	protos.common.Credential credential = 2;
	string dataContractID = 3;
}

message GetDataContractIDsOfApplicantRequest {
	string applicantID = 1;
	protos.common.Credential credential = 2;
}

message GetDataContractIDsOfApplicantResponse {
	map<string,string> datacontracts = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetDataContractIDsOfProviderRequest {
	string providerID = 1;
	protos.common.Credential credential = 2;
	string dataSetIDOfProvider = 3;
}

message GetDataContractIDsOfProviderResponse {
	map<string,string> datacontracts = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetDataContractInfoOfApplicantWithProvRequest {
	string applicantID = 1;
	protos.common.Credential credential = 2;
	string dataSetIDOfProvider = 3;
}

message GetDataContractInfoOfApplicantWithProvResponse {
	string dataContractInfo = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message NewInterfaceRequest {
	string applicantID = 1;
	protos.common.Credential credential = 2;
	string interfaceYaml = 3;
}

message NewInterfaceResponse {
	string interfaceID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetInterfaceInfoRequest {
	string applicantID = 1;
	protos.common.Credential credential = 2;
	string interfaceID = 3;
}

message GetInterfaceInfoResponse {
	string interfaceYaml = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message RemoveInterfaceRequest {
	string applicantID = 1;
	protos.common.Credential credential = 2;
	string namespaceID = 3;
	string interfaceID = 4;
}

message GetStorageLocationInfoRequest {
	string storageLocationID = 1;
	bool fromBackend = 2;
}

message GetStorageLocationInfoResponse {
	protos.common.StorageLocationInfo storageLocationInfo = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetExecutionEnvironmentInfoRequest {
	string execEnvID = 1;
	bool fromBackend = 2;
}

message GetExecutionEnvironmentInfoResponse {
	protos.common.ExecutionEnvironmentInfo executionEnvironmentInfo = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetDataClayIDResponse {
	string dataClayID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message RegisterExternalDataClayRequest {
	string hostname = 1;
	int32 port = 2;
}

message RegisterExternalDataClayOverrideAuthorityRequest {
	string adminAccountID = 1;
	protos.common.Credential adminCredential = 2;
	string hostname = 3;
	int32 port = 4;
	string authority = 5;
}

message RegisterExternalDataClayResponse {
	string extDataClayID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message NotifyRegistrationOfExternalDataClayRequest { 
	string extDataClayID = 1;
	string hostname = 2;
	int32 port = 3;
}

message NotifyRegistrationOfExternalDataClayResponse {
	string extDataClayID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}


message GetExternalDataclayIDRequest {
	string host = 1;
	int32 port = 2;
}

message GetExternalDataclayIDResponse {
	string extDataClayID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetExtDataClayInfoRequest {
	string extDataClayID = 1;
}

message GetExtDataClayInfoResponse {
	protos.common.DataClayInstance extDataClayInfo = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message RegisterObjectForGCRequest {
	protos.common.RegistrationInfo regInfo = 1;
	string backendID = 2;
}

message RegisterObjectsRequest {
	repeated protos.common.RegistrationInfo regInfos = 1;
	string backendID = 2;
	protos.common.Langs lang = 3;
}

message RegisterObjectsResponse {
	repeated string objectIDs = 1;
	protos.common.ExceptionInfo excInfo = 2;
}


message GetAllExecutionEnvironmentsInfoRequest {
	protos.common.Langs execEnvLang = 1;
	bool getExternal = 2;
	bool fromBackend = 3;
}

message GetAllExecutionEnvironmentsInfoResponse {
	map<string, protos.common.ExecutionEnvironmentInfo> execEnvs = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetObjectInfoRequest {
	string sessionID = 1;
	string objectID = 2;
}

message GetObjectInfoResponse {
	string classname = 1;
	string namespace = 2;
	protos.common.ExceptionInfo excInfo = 3;
}

message GetObjectFromAliasRequest {
	string sessionID = 1;
	string alias = 2;
}

message GetObjectFromAliasResponse {
	string objectID = 1;
	string classID = 2;
	string hint = 3;
	protos.common.ExceptionInfo excInfo = 4;
}


message AddAliasRequest{
	string objectIDToHaveAlias = 1;
	string alias = 2;
}

message DeleteAliasRequest {
	string sessionID = 1;
	string alias = 2;
}

message DeleteAliasResponse {
	string objectID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetObjectsMetaDataInfoOfClassForNMRequest {
	string classID = 1;
}

message GetObjectsMetaDataInfoOfClassForNMResponse {
	map<string, protos.common.MetaDataInfo> mdataInfo = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message SetDataSetIDRequest { 
	string sessionID = 1;
	string objectID = 2;
	string datasetID = 3;
}

message SetDataSetIDFromGarbageCollectorRequest { 
	string objectID = 1;
	string datasetID = 2;
}

message MoveObjectRequest {
	string sessionID = 1;
	string objectID = 2;
	string srcBackendID = 3;
	string destBackendID = 4;
	bool recursive = 5;
}

message MoveObjectResponse {
	repeated string objectIDs = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message SetObjectReadOnlyRequest {
	string sessionID = 1;
	string objectID = 2;
}

message SetObjectReadWriteRequest {
	string sessionID = 1;
	string objectID = 2;
}

message GetMetadataByOIDRequest {
	string sessionID = 1;
	string objectID = 2;
}

message GetMetadataByOIDResponse {
	protos.common.MetaDataInfo mdInfo = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetMetadataByOIDForDSRequest {
	string objectID = 1;
}

message GetMetadataByOIDForDSResponse {
	protos.common.MetaDataInfo mdInfo = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message ExecuteImplementationRequest {
	string sessionID = 1;
	string operationID = 2;
	string implementationID = 3;
	string contractID = 4;
	string interfaceID = 5;
	string objectID = 6;
	protos.common.SerializedParametersOrReturn params = 7;
}

message ExecuteImplementationResponse {
	protos.common.SerializedParametersOrReturn ret = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message ExecuteMethodOnTargetRequest {
	string sessionID = 1;
	string objectID = 2;
	string operationNameAndSignature = 3;
	protos.common.SerializedParametersOrReturn params = 4;
	string targetBackendID = 5;
}

message ExecuteMethodOnTargetResponse {
	protos.common.SerializedParametersOrReturn ret = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message SynchronizeFederatedObjectRequest {
	string extDataClayID = 1;
	string objectID = 2;
	string implementationID = 3;
	protos.common.SerializedParametersOrReturn params = 4;
	bool allBackends = 5;
}

message GetStubsRequest {
	string applicantAccountID = 1;
	protos.common.Credential credentials = 2;
	protos.common.Langs language = 3;
	repeated string contractIDs = 4;
}

message GetStubsResponse {
	map<string, bytes> stubs = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetBabelStubsRequest {
	string accountID = 1;
	protos.common.Credential credentials = 2;
	repeated string contractIDs = 4;
}

message GetBabelStubsResponse {
	bytes yamlStub = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetClassNameForDSRequest {
	string classID = 1;
}

message GetClassNameForDSResponse {
	string className = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetClassNameAndNamespaceForDSRequest {
	string classID = 1;
}

message GetClassNameAndNamespaceForDSResponse {
	string className = 1;
	string namespace = 2;
	protos.common.ExceptionInfo excInfo = 3;
}

message RegisterECARequest {
	string applicantAccountID = 1;
	protos.common.Credential credentials = 2;
	string eca = 3;
}

message AdviseEventRequest {
	string eventYaml = 1;
}

message GetContractIDOfDataClayProviderRequest {
	string applicantAccountID = 1;
	protos.common.Credential credentials = 2;
}

message GetContractIDOfDataClayProviderResponse {
	string contractID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message ActivateTracingRequest {
	int32 taskid = 1;
}

message CloseSessionRequest {
	string sessionID = 1;
}

message UnregisterObjectsRequest { 
	repeated string objectsToUnregister = 1;
	
}

message IsPrefetchingEnabledResponse { 
	bool enabled = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message ObjectExistsInDataClayRequest { 
	string objectID = 1;
}

message ObjectExistsInDataClayResponse { 
	bool exists = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message GetClassesInNamespaceRequest {
	string namespaceName = 1;
}

message GetClassesInNamespaceResponse {
	string namespaceYaml = 1;
	repeated string metaClassYaml = 2;
	protos.common.ExceptionInfo excInfo = 3;
}

message ImportModelsFromExternalDataClayRequest {
	string namespaceName = 1;
	string dataClayID = 2;
}

message GetStorageLocationIDRequest {
	string slName = 1;
}

message GetStorageLocationIDResponse {
	string storageLocationID = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message NotifyExecutionEnvironmentShutdownRequest {
	string executionEnvironmentID = 1;
}

message NotifyStorageLocationShutdownRequest {
	string storageLocationID = 1;
}

message ExistsActiveEnvironmentsForSLRequest {
	string storageLocationID = 1;
}

message ExistsActiveEnvironmentsForSLResponse {
	bool exists = 1;
	protos.common.ExceptionInfo excInfo = 2;
}

message MetadataInfo {
	string dataClayID = 1;
	bool isReadOnly = 2;
	string datasetID = 3;
	string metaclassID = 4;
	repeated string locations = 5;
	string alias = 6;
	string ownerID = 7;
}